the favicon grew lonely, and unfurled an index.html to keep it company

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-In the beginning
+<!DOCTYPE html>
+<html>
+    <head>
+    </head>
+    <body>
+        <p>In the beginning</p>
+    </body>
+</html>
