From the head of index sprung a title, fully formed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Malicious or Not, I'm Walkin on Air </title>
     </head>
     <body>
         <p>In the beginning</p>
