The title contemplated it's future, and decided it required more character than it currently possessed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title> Malicious or Not, I'm Walkin on Air </title>
     </head>
     <body>
