--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title> Malicious or Not, I'm Walkin on Air </title>
     </head>
     <body>
-        <p>Hi Oli</p>
+        <p>Hi Scott, I didn't have another joke to link to so</p>
     </body>
 </html>
