--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title> Malicious or Not, I'm Walkin on Air </title>
     </head>
     <body>
-        <p>Hi Scott, I didn't have another joke to link to, so here we are</p>
-        <p>While we never really did want to know, sometimes it was good to check</p>
+        <p>Hi Larry, heard you were just having like, a real cool day!</p>
+        <p>Hope it stays super fun!</p>
     </body>
 </html>
